unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/CA_Personalized_Object_Setting__c.object-meta.xml
<CustomObject>
    <label>CA Personalized Object Setting</label>
    <nameField>
        <displayFormat>CA_POS-{0000}</displayFormat>
        <label>POS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Personalized Object Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>