unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Analytics_Link__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Link__c</fullName>
    <inlineHelpText>Put the analytics link here for a customer to be able to be used on the analytics page</inlineHelpText>
    <label>Analytics Link</label>
    <type>Url</type>
</CustomField>