unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Available_Reports__c.field-meta.xml
<CustomField>
    <fullName>Available_Reports__c</fullName>
    <inlineHelpText>Use this field to show/hide available reports for a client</inlineHelpText>
    <label>Available Reports</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exhibit Schedule Report</fullName>
                <default>true</default>
                <label>Exhibit Schedule Report</label>
            </value>
            <value>
                <fullName>Consolidated Event Schedule</fullName>
            </value>
            <value>
                <fullName>Financial Summary Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>