unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Available_Tiles__c.field-meta.xml
<CustomField>
    <fullName>Available_Tiles__c</fullName>
    <description>Select the tiles that you would need to display on the home screen for a profile.</description>
    <inlineHelpText>Select the tiles that you would need to display on the home screen for a profile.</inlineHelpText>
    <label>Available Tiles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Analytics</fullName>
                <default>true</default>
                <label>Analytics</label>
            </value>
            <value>
                <fullName>Congresses</fullName>
            </value>
            <value>
                <fullName>Files</fullName>
            </value>
            <value>
                <fullName>Graphics Proofing</fullName>
            </value>
            <value>
                <fullName>Portables Ordering</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Tasks</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>