unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/ConEvSchRep_All_Columns__c.field-meta.xml
<CustomField>
    <fullName>ConEvSchRep_All_Columns__c</fullName>
    <label>ConEvSchRep All Columns</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>