unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Consolidated_PowerBI__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_PowerBI__c</fullName>
    <label>Consolidated PowerBI</label>
    <type>Url</type>
</CustomField>