unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Create_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Create_Button_Label__c</fullName>
    <defaultValue>&quot;New Record&quot;</defaultValue>
    <inlineHelpText>Use another text to replace the labels of the button (like Create, New Event) displayed on the page, else leave it blank. Dafault value is: New</inlineHelpText>
    <label>Create Button Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>