unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Customer_Logo__c.field-meta.xml
<CustomField>
    <fullName>Customer_Logo__c</fullName>
    <defaultValue>&quot;GESProjectCentral_Logo_gray?v=1&quot;</defaultValue>
    <inlineHelpText>Enter the url where customer logo is stored, else the default logo will be displayed</inlineHelpText>
    <label>Customer Logo</label>
    <type>Url</type>
</CustomField>