unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Delete_Children__c.field-meta.xml
<CustomField>
    <fullName>Delete_Children__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Delete Children</label>
    <type>Checkbox</type>
</CustomField>