unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <defaultValue>&quot;An error occurred while saving the record. Please contact your system admin.&quot;</defaultValue>
    <inlineHelpText>Enter the text that you want to be displayed when the record save fails. Leave it blank for default message</inlineHelpText>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>