unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/ExSchRep_All_Columns__c.field-meta.xml
<CustomField>
    <fullName>ExSchRep_All_Columns__c</fullName>
    <defaultValue>&quot;Name Of Congress,Congress Acronym,Congress Start Date,Congress End Date,Facility,Location,Country,Business Unit,Therapeutic Area,Product,Congress Level,Congress Manager,GES Account Executive Name,GES Account Manager Name,Activity Type,Congress Type,Exhibit Hours,Professional Attendance,WebSite,Booth Length,Booth Width,Booth Number&quot;</defaultValue>
    <inlineHelpText>The column headers here would be used to download the report.</inlineHelpText>
    <label>ExSchRep All Columns</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>