unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/ExSchReport_CSV_Cols__c.field-meta.xml
<CustomField>
    <fullName>ExSchReport_CSV_Cols__c</fullName>
    <description>enter the field names for csv download here</description>
    <inlineHelpText>enter the field names for csv download here</inlineHelpText>
    <label>ExSchReport CSV Cols</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>