unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Field_Label_Map__c.field-meta.xml
<CustomField>
    <fullName>Field_Label_Map__c</fullName>
    <label>Field Label Map</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>