unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Files_Link__c.field-meta.xml
<CustomField>
    <fullName>Files_Link__c</fullName>
    <defaultValue>&quot;https://www.ges.com&quot;</defaultValue>
    <inlineHelpText>Link to be used for files</inlineHelpText>
    <label>Files Link</label>
    <type>Url</type>
</CustomField>