unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Global_Button_Style__c.field-meta.xml
<CustomField>
    <fullName>Global_Button_Style__c</fullName>
    <defaultValue>&quot;color:#ffffff&quot;</defaultValue>
    <inlineHelpText>Give the css which comes in the double quotes after the syle= tag. For example, if the css is like this- style=&quot;color:#ffffff&quot;; you need to enter only color:#ffffff</inlineHelpText>
    <label>Global Button Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>