unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Graphic_Proofing_Link__c.field-meta.xml
<CustomField>
    <fullName>Graphic_Proofing_Link__c</fullName>
    <label>Graphic Proofing Link</label>
    <type>Url</type>
</CustomField>