unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Home_Page_Style__c.field-meta.xml
<CustomField>
    <fullName>Home_Page_Style__c</fullName>
    <defaultValue>&quot;border: none;background-image: linear-gradient(to right, lightgray, white);&quot;</defaultValue>
    <inlineHelpText>Enter the css of the homepage layout without &quot; &quot;.  You can also enter the image  as the asset file name that is uploaded in the community. Default value is 
border: none;background-image: linear-gradient(to right, lightgray, white);</inlineHelpText>
    <label>Home Page Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>