unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <label>Object Logo</label>
    <type>Url</type>
</CustomField>