unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Number_Of_Sections__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Sections__c</fullName>
    <label>Number Of Sections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>