unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Object_Color__c.field-meta.xml
<CustomField>
    <fullName>Object_Color__c</fullName>
    <inlineHelpText>Use a hex value for color</inlineHelpText>
    <label>Object Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>