unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Profile_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CA_Main_Event__c</fullName>
            </value>
            <value>
                <fullName>CA_Exhibit__c</fullName>
            </value>
            <value>
                <fullName>CA_Product__c</fullName>
            </value>
            <value>
                <fullName>CA_Event__c</fullName>
            </value>
            <value>
                <fullName>CA_Meeting_Planning__c</fullName>
            </value>
            <value>
                <fullName>CA_Meeting_Room__c</fullName>
            </value>
            <value>
                <fullName>CA_Membership__c</fullName>
            </value>
            <value>
                <fullName>CA_Speaking_Engagement__c</fullName>
            </value>
            <value>
                <fullName>CA_Sponsorship__c</fullName>
            </value>
            <value>
                <fullName>CA_Sporting_Event__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>