unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Ordering_Link__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Link__c</fullName>
    <label>Ordering Link</label>
    <type>Url</type>
</CustomField>