unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GC Crown Castle</fullName>
            </value>
            <value>
                <fullName>GC Merck</fullName>
            </value>
            <value>
                <fullName>GC Novo Nordisk</fullName>
            </value>
            <value>
                <fullName>GC Sig Sauer</fullName>
            </value>
            <value>
                <fullName>GT Event Client</fullName>
            </value>
            <value>
                <fullName>GC BMS Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>