unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID__c</fullName>
    <inlineHelpText>Enter the record type ID assigned to this profile for this Object</inlineHelpText>
    <label>Record Type ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>