unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Run_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Run_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Run Trigger</label>
    <type>Checkbox</type>
</CustomField>