unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Save_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Save_Button_Label__c</fullName>
    <defaultValue>&quot;Save&quot;</defaultValue>
    <inlineHelpText>Use another text to replace the labels of the button (like Create, Insert) displayed on the page, else leave it blank. Dafault value is: Save</inlineHelpText>
    <label>Save Button Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>