unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Search_Filters__c.field-meta.xml
<CustomField>
    <fullName>Search_Filters__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <inlineHelpText>Enter the fields based on which you want the search to be working. A maximum of 6 fields including max 2 date fields and 4 text fields</inlineHelpText>
    <label>Search Filters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>