unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Success_Message__c.field-meta.xml
<CustomField>
    <fullName>Success_Message__c</fullName>
    <defaultValue>&quot;Record saved successfully&quot;</defaultValue>
    <inlineHelpText>Enter the text which will be displayed when the record is created or edited successfully else leave it blank for default message</inlineHelpText>
    <label>Success Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>