unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Table_Columns__c.field-meta.xml
<CustomField>
    <fullName>Table_Columns__c</fullName>
    <defaultValue>&quot;Name_of_Event__c,Event_Acronym__c&quot;</defaultValue>
    <inlineHelpText>Enter the api names of the fields that you want to be displayed in the table displayed in the homepage exactly in the order that you want for a customer. Default value is : Name_of_Event__c,Event_Acronym__c</inlineHelpText>
    <label>Table Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>