unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/fields/Tasks_Link__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Link__c</fullName>
    <defaultValue>&quot;https://www.wrike.com&quot;</defaultValue>
    <label>Tasks Link</label>
    <type>Url</type>
</CustomField>