unpackaged/main/default/objects/CA_Personalized_Object_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Profile_Name__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Available_Tiles__c</columns>
    <columns>Object_Label__c</columns>
    <columns>Run_Trigger__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>